--- a/app/src/main/res/layout/activity_input_question.xml
+++ b/app/src/main/res/layout/activity_input_question.xml
@@ -7,36 +7,29 @@
     android:orientation="vertical"
     tools:context=".InputQuestionActivity">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="75dp"
-        android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/tv_inputquestion_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:text="题目录入"
-            android:textColor="#3f3f3f"
-            android:textSize="48dp" />
-    </LinearLayout>
+    <TextView
+        android:id="@+id/tv_inputquestion_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginVertical="10dp"
+        android:gravity="center"
+        android:text="题目录入"
+        android:textColor="#3f3f3f"
+        android:textSize="18sp" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/tv_inputquestion_questiontitle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:textSize="32dp"
-            android:text="问题题目:" />
+    <TextView
 
-    </LinearLayout>
+        android:id="@+id/tv_inputquestion_questiontitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:text="问题题目:"
+        android:textColor="@color/black"
+        android:textSize="16sp" />
+
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -45,141 +38,150 @@
 
         <EditText
             android:id="@+id/ev_inputquestion_questiontitle"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:ems="10"
-            android:inputType="textPersonName"
-            android:text="" />
+            android:layout_marginHorizontal="30dp"
+            android:inputType="text" />
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
+        android:gravity="center_horizontal"
         android:orientation="horizontal">
 
         <TextView
             android:id="@+id/tv_inputquestion_choicea"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="   选项A：" />
+            android:text="选项A："
+            android:textColor="@color/black" />
 
         <EditText
             android:id="@+id/ev_inputquestion_choicea"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:ems="10"
-            android:inputType="textPersonName"
+            android:ems="14"
+            android:inputType="text"
             android:text="" />
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:gravity="center_horizontal">
 
         <TextView
             android:id="@+id/tv_inputquestion_choiceb"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="   选项B：" />
+
+            android:text="选项B："
+            android:textColor="@color/black" />
 
         <EditText
             android:id="@+id/ev_inputquestion_choiceb"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:ems="10"
-            android:inputType="textPersonName"
+
+            android:ems="14"
+            android:inputType="text"
             android:text="" />
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:gravity="center_horizontal">
 
         <TextView
             android:id="@+id/tv_inputquestion_choicec"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="   选项C：" />
+
+            android:text="选项C："
+            android:textColor="@color/black" />
 
         <EditText
             android:id="@+id/ev_inputquestion_choicec"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:ems="10"
-            android:inputType="textPersonName"
+
+            android:ems="14"
+            android:inputType="text"
             android:text="" />
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:gravity="center_horizontal">
 
         <TextView
             android:id="@+id/tv_inputquestion_choiced"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="   选项D：" />
+
+            android:text="选项D："
+            android:textColor="@color/black"
+            />
 
         <EditText
             android:id="@+id/ev_inputquestion_choiced"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:ems="10"
-            android:inputType="textPersonName"
+
+            android:ems="14"
+            android:inputType="text"
             android:text="" />
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:gravity="center_horizontal">
 
         <TextView
             android:id="@+id/tv_inputquestion_correctAnswer"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="正确答案为：" />
+
+            android:text="正确答案为："
+            android:textColor="@color/black" />
 
         <EditText
             android:id="@+id/ev_inputquestion_correctAnswer"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:ems="10"
-            android:inputType="textPersonName" />
+
+            android:ems="14"
+            android:inputType="text" />
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:gravity="center_horizontal">
 
         <TextView
             android:id="@+id/tv_inputquestion_chapter"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="问题章节：" />
+
+            android:text="问题章节："
+            android:textColor="@color/black" />
 
         <EditText
             android:id="@+id/ev_inputquestion_chapter"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:ems="10"
+
+            android:ems="14"
             android:inputType="number" />
     </LinearLayout>
 
@@ -201,7 +203,6 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="取消" />
-
 
     </LinearLayout>
 </LinearLayout>
