--- a/app/src/main/res/layout/activity_aboutus.xml
+++ b/app/src/main/res/layout/activity_aboutus.xml
@@ -10,14 +10,14 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="五班安卓第三小组"
+        android:text="助力444同学计划"
         android:textColor="@color/black"
         android:textSize="24sp" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="徐佳辰 徐禹萌 黄琬乔 裴育"
+        android:text="111 222 333 444 555 666"
         android:textColor="@color/black"
         android:textSize="24sp" />
 
@@ -30,5 +30,5 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="100dp"
-        android:text="本程序题目均选自移动平台开发技术云班课题目" />
+        android:text="本程序题目均选自考研英语单词" />
 </LinearLayout>
